--- a/SQLiteDemo.dproj
+++ b/SQLiteDemo.dproj
@@ -5,7 +5,7 @@
         <FrameworkType>FMX</FrameworkType>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Debug</Config>
-        <Platform Condition="'$(Platform)'==''">Android64</Platform>
+        <Platform Condition="'$(Platform)'==''">Win64</Platform>
         <TargetedPlatforms>32787</TargetedPlatforms>
         <AppType>Application</AppType>
         <MainSource>SQLiteDemo.dpr</MainSource>
@@ -388,6 +388,12 @@
                 </DeployFile>
                 <DeployFile LocalName="Win32\Debug\SQLiteDemo.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
+                        <RemoteName>SQLiteDemo.exe</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="Win64\Debug\SQLiteDemo.exe" Configuration="Debug" Class="ProjectOutput">
+                    <Platform Name="Win64">
                         <RemoteName>SQLiteDemo.exe</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
